# Grade-Course-Calculator

./: CMakeLists.txt  README.md  courseGradeCalc.cpp  courseGradeCalc.hpp  course_widget.cpp  course_widget.hpp  course_widget_main.cpp  main.cpp
